# Magtrix

./: .gitignore  .gitmodules  links.md  readme.md
docs/: ISC_EMB_poster_diplome_Stirnemann_Vannel_2024.pptx  mind.md  planning.csv
docs/logs/: mesures_boards.md  planning.gantt  week_2.md  week_3.md  week_4.md  week_5.md
docs/memoire/: Feuille_de_style_mémoire_LaTeX.aux  Feuille_de_style_mémoire_LaTeX.bbl  Feuille_de_style_mémoire_LaTeX.bcf  Feuille_de_style_mémoire_LaTeX.fdb_latexmk  Feuille_de_style_mémoire_LaTeX.fls  Feuille_de_style_mémoire_LaTeX.lof  Feuille_de_style_mémoire_LaTeX.out  Feuille_de_style_mémoire_LaTeX.ptc  Feuille_de_style_mémoire_LaTeX.run.xml  Feuille_de_style_mémoire_LaTeX.tex  sources.bib  sources2.bib
pcb/breadboard_circuit/: test_linear_1.kicad_prl  test_linear_1.kicad_pro
pcb/coil_driver/: #auto_saved_files#  _autosave-coil_module1.kicad_sch  _autosave-coil_module3.kicad_sch  bomlist_coil_tester_stirnemann.csv  bomlist_coil_tester_stirnemann_mouser.csv  coil_driver.kicad_pcb  coil_driver.kicad_prl  coil_driver.kicad_pro  coil_driver.kicad_sch  coil_module1.kicad_sch  coil_module2.kicad_sch  coil_module3.kicad_sch  fp-info-cache  (+4 more)
simulation/: flyback_diodes.asc  flyback_diodes.net  flyback_diodes.op.raw  flyback_diodes2.asc  flyback_diodes2.net  flyback_diodes2.op.raw
src/: power.py
src/mcu/firmware/: .clang-format  CMakeLists.txt  FreeRTOSConfig.h  coil_map.c  firmware_magtrix.c  firmware_magtrix_small.c  mag_pwm.c  mag_pwm.h  mag_sr.c  mag_sr.h  magtrix.c  magtrix.h  ws_pwm.c  ws_pwm.h
src/mcu/firmware/script/: main.py
(+279 files in other folders)
